chore: update workflow

--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
+          base: main
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: review/issue-${{ github.event.issue.number }}
           title: "Review: Rate Provider from Issue #${{ github.event.issue.number }}"
