--- a/.github/workflows/open-pr-with-file.yml
+++ b/.github/workflows/open-pr-with-file.yml
@@ -3,7 +3,7 @@ on:
   issues:
     types: [opened, edited, reopened]
 jobs:
-  write-review:
+  write-sample-review:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
