--- a/.github/workflows/open-pr-with-file.yml
+++ b/.github/workflows/open-pr-with-file.yml
@@ -11,6 +11,8 @@ jobs:
 
       - name: Create branch
         run: |
+          git config --local user.email "mkflow27@gmail.com"
+          git config --local user.name "mkflow27"
           git checkout -b my-feature-branch
       - name: Create review
         run: echo "Lorem ipsum dolor" > lorem-ipsum.txt
