--- a/.github/workflows/open-pr-with-file.yml
+++ b/.github/workflows/open-pr-with-file.yml
@@ -25,5 +25,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7.0.8
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          base: main
+          branch: my-feature-branch
           title: "Create review"
           body: "This pull request adds a sample review file."
