--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -25,6 +25,7 @@ jobs:
         run: npx tsx scripts/process-issue.ts
         env:
           ISSUE_DATA: ${{ steps.parse-issue.outputs.json }}
+          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
           BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
           ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
