--- a/.github/workflows/process-issue.yml
+++ b/.github/workflows/process-issue.yml
@@ -25,6 +25,9 @@ jobs:
         run: npx tsx scripts/process-issue.ts
         env:
           ISSUE_DATA: ${{ steps.parse-issue.outputs.json }}
+          TENDERLY_ACCOUNT_SLUG: ${{ secrets.TENDERLY_ACCOUNT_SLUG }}
+          TENDERLY_PROJECT_SLUG: ${{ secrets.TENDERLY_PROJECT_SLUG }}
+          TENDERLY_API_ACCESS_KEY: ${{ secrets.TENDERLY_API_ACCESS_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
           BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
