--- a/.github/ISSUE_TEMPLATE/automated-review-request.yml
+++ b/.github/ISSUE_TEMPLATE/automated-review-request.yml
@@ -13,6 +13,7 @@ body:
         - label: Is a combined rate provider needed (i.e. wstETH in aave)?
         - label: Does this rate provider pertain to an ERC4626 contract?
         - label: If so, is the intention for this ERC4626 asset to be boosted?
+        - label: If so, is the Buffer already initialized
         - label: If so, shall the underlying asset be used to add/remove liquidity in a pool if possible? (i.e. add USDC for waUSDC)
         - label: If so, shall the wrapped asset also be used to add/remove liquidity in a pool? (i.e. add waUSDC directly)
   - type: dropdown
@@ -88,6 +89,11 @@ body:
       placeholder: The ERC4626 vault is used to provide the rate of the underlying asset in a pool.
     validations:
       required: false
+  - type: input
+    id: fork-tests
+      label: Link to passing fork tests
+      description: Please provide a link to the fork tests that pass for the ERC4626 vault
+      placeholder: https://github.com/balancer/balancer-v3-erc4626-tests/blob/main/test/mainnet/ERC4626MainnetAaveUSDe.t.sol
   - type: checkboxes
     id: terms
     attributes:
